--- a/main.html
+++ b/main.html
@@ -10,7 +10,20 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<form action="#" method="POST">
+<h2>Feedback Form</h2>
+ <label for="name">Name:</label> 
+  <input type="Text" id="name" name="name"  minlength="3", maxlength="50" required> <br> <br>
 
+  <label for="portfolio">Portfolio:</label>
+	<input type="URL" id="portfolio" name="portfolio" required> <br> <br>
+
+	<label for="favcolor">Favorite Color:</label>
+	<input type="Color" id="favColor" name="favColor" required> <br> <br>
+
+	<label for="likeness">Likeness:</label>
+	<input type="Range" id="likeness" name="likeness" min="1", max="100" required> <br> <br>
+</form>
 </body>
 
 </html>
