--- a/main.html
+++ b/main.html
@@ -13,16 +13,16 @@
 <form action="#" method="POST">
 <h2>Feedback Form</h2>
  <label for="name">Name:</label> 
-  <input type="Text" id="name" name="name"  minlength="3", maxlength="50" required> <br> <br>
+  <input type="text" id="name" name="name"  minlength="3", maxlength="50" required> <br> <br>
 
   <label for="portfolio">Portfolio:</label>
-	<input type="URL" id="portfolio" name="portfolio" required> <br> <br>
+	<input type="url" id="portfolio" name="portfolio" required> <br> <br>
 
 	<label for="favcolor">Favorite Color:</label>
-	<input type="Color" id="favColor" name="favColor" required> <br> <br>
+	<input type="color" id="favColor" name="favColor" required> <br> <br>
 
 	<label for="likeness">Likeness:</label>
-	<input type="Range" id="likeness" name="likeness" min="1", max="100" required> <br> <br>
+	<input type="range" id="likeness" name="likeness" min="1", max="100" required> <br> <br>
 </form>
 </body>
 
