--- a/main.html
+++ b/main.html
@@ -19,10 +19,10 @@
 	<input type="url" id="portfolio" name="portfolio" required> <br> <br>
 
 	<label for="favcolor">Favorite Color:</label>
-	<input type="color" id="favColor" name="favColor" required> <br> <br>
+	<input type="color" id="favColor" name="favColor" > <br> <br>
 
 	<label for="likeness">Likeness:</label>
-	<input type="range" id="likeness" name="likeness" min="1", max="100" required> <br> <br>
+	<input type="range" id="likeness" name="likeness" min="1", max="100" > <br> <br>
 </form>
 </body>
 
