--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
   <label for="portfolio">Portfolio:</label>
 	<input type="url" id="portfolio" name="portfolio" required> <br> <br>
 
-	<label for="favcolor">Favorite Color:</label>
+	<label for="favColor">Favorite Color:</label>
 	<input type="color" id="favColor" name="favColor" > <br> <br>
 
 	<label for="likeness">Likeness:</label>
